...
                            Button(
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .padding(horizontal = 100.dp, vertical = 10.dp),
                                onClick = { /*TODO*/ }
                            ) {
                                Text(text = "Crear un álbum", color = Color.White)
                            }
                        }
                        item {
                            Button(
                                modifier = Modifier
                                    .fillMaxWidth()
...
